--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,9 @@ jobs:
           aws_secret_access_key: 'test'
           aws_region: 'us-east-1'
           s3_bucket: 'test-bucket'
+          s3_endpoint: 'http://localhost:9000'
+          s3_force_path_style: 'true'
+          s3_tls_verify: 'false'
           prometheus_pushgateway: 'http://localhost:9091'
           browser: 'chromium'
           test_dir: './tests'
