--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@ AWS_ACCESS_KEY_ID=your_access_key
 AWS_SECRET_ACCESS_KEY=your_secret_key
 AWS_REGION=your_region
 S3_BUCKET=your_bucket_name
+S3_ENDPOINT=your_s3_endpoint_url
+S3_FORCE_PATH_STYLE=true
+S3_TLS_VERIFY=true
 PROMETHEUS_PUSHGATEWAY=http://your-pushgateway:9091
 TEST_URL=https://your-target-site.com
