modified s3 to use AWS and others

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
+# For AWS S3:
+# - Leave S3_ENDPOINT empty - the SDK will handle endpoints automatically
+# - Set AWS_REGION to your bucket's region (e.g., us-east-2)
+# - S3_FORCE_PATH_STYLE and S3_TLS_VERIFY are not needed for AWS S3
 AWS_ACCESS_KEY_ID=your_access_key
 AWS_SECRET_ACCESS_KEY=your_secret_key
 AWS_REGION=your_region
 S3_BUCKET=your_bucket_name
-S3_ENDPOINT=your_s3_endpoint_url
-S3_FORCE_PATH_STYLE=true
-S3_TLS_VERIFY=true
+
+# For non-AWS S3-compatible services (MinIO, etc.):
+# S3_ENDPOINT=your_s3_endpoint_url
+# S3_FORCE_PATH_STYLE=true
+# S3_TLS_VERIFY=true
+
 PROMETHEUS_PUSHGATEWAY=http://your-pushgateway:9091
 TEST_URL=https://your-target-site.com
