fixing aws issues

--- a/.env
+++ b/.env
@@ -1,9 +1,15 @@
+# For AWS S3:
+# - AWS_REGION must match your bucket's region (e.g., us-east-2)
+# - Do NOT set S3_ENDPOINT for AWS S3
 AWS_ACCESS_KEY_ID=test
 AWS_SECRET_ACCESS_KEY=test
-AWS_REGION=us-east-1
+AWS_REGION=us-east-2
 S3_BUCKET=test-bucket
-S3_ENDPOINT=http://localhost:9000
-S3_FORCE_PATH_STYLE=true
-S3_TLS_VERIFY=false
+
+# Remove or comment out these for AWS S3:
+# S3_ENDPOINT=http://localhost:9000
+# S3_FORCE_PATH_STYLE=true
+# S3_TLS_VERIFY=false
+
 PROMETHEUS_PUSHGATEWAY=http://localhost:9091
 TEST_URL=http://example.com
