--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
+    "@zaproxy/zap-api-client": "^2.0.1",
+    "archiver": "^6.0.1",
     "prom-client": "^15.1.0",
-    "web-vitals": "^3.5.2",
-    "archiver": "^6.0.1"
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
