--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -48,7 +48,7 @@ jobs:
     
     services:
       zap:
-        image: owasp/zap2docker-stable
+        image: ghcr.io/zaproxy/zaproxy:stable
         ports:
           - 8080:8080
         options: >-
