--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -22,7 +22,7 @@ services:
       retries: 5
 
   zap:
-    image: owasp/zap2docker-stable
+    image: ghcr.io/zaproxy/zaproxy:stable
     ports:
       - "8080:8080"
     environment:
