add ZAP container startup and configuration steps to workflow

--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -47,38 +47,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     
-    services:
-      zap:
-        image: ghcr.io/zaproxy/zaproxy:weekly
-        ports:
-          - 8080:8080
-        options: >-
-          --health-cmd "curl -sf http://localhost:8080/ > /dev/null || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-          --health-start-period 30s
-          --user zap
-
     steps:
       - uses: actions/checkout@v4
       
-      # Add ZAP configuration step before other steps
-      - name: Configure ZAP
-        run: |
-          # Wait for ZAP to be responsive
-          until curl -sf http://localhost:8080/ > /dev/null; do
-            echo "Waiting for ZAP to start..."
-            sleep 2
-          done
-          
-          # Configure ZAP settings
-          curl -sf "http://localhost:8080/JSON/core/action/setOptionHttpStateEnabled/?boolean=true"
-          curl -sf "http://localhost:8080/JSON/core/action/setOptionThreadPerHost/?Integer=4"
-          curl -sf "http://localhost:8080/JSON/core/action/setOptionTimeoutInSecs/?Integer=120"
-          curl -sf "http://localhost:8080/JSON/spider/action/setOptionMaxDuration/?Integer=60"
-          curl -sf "http://localhost:8080/JSON/spider/action/setOptionMaxParseSizeBytes/?Integer=10485760"
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -147,6 +118,7 @@ jobs:
           curl -sf "${{ env.ZAP_API_URL }}/JSON/ascan/action/stopAllScans/" || true
           curl -sf "${{ env.ZAP_API_URL }}/JSON/spider/action/stopAllScans/" || true
           sleep 2
-          # Shutdown ZAP
+          # Shutdown ZAP and remove container
           curl -sf "${{ env.ZAP_API_URL }}/JSON/core/action/shutdown/" || true
           sleep 5
+          docker rm -f zap || true
