--- a/.github/actions/setup-zap/action.yml
+++ b/.github/actions/setup-zap/action.yml
@@ -19,6 +19,16 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - name: Start ZAP
+      shell: bash
+      run: |
+        docker run -d \
+          --name zap \
+          -p 8080:8080 \
+          -e JAVA_OPTS="-Xms512m -Xmx4096m" \
+          owasp/zap2docker-stable:latest \
+          zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.disablekey=true
+
     - name: Verify ZAP readiness
       id: verify-zap
       shell: bash
@@ -30,6 +40,7 @@ runs:
           if [ $attempt -eq $max_attempts ]; then
             echo "status=failed" >> $GITHUB_OUTPUT
             echo "ZAP failed to start after $max_attempts attempts"
+            docker logs zap
             exit 1
           fi
           echo "Attempt $attempt: ZAP not ready, waiting..."
@@ -43,17 +54,14 @@ runs:
       shell: bash
       run: |
         # Core settings
-        curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionDefaultUserAgent/?String=Mozilla/5.0 (Windows NT 10.0; Win64; x64) Chrome/120.0.0.0 Safari/537.36"
+        curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionDefaultUserAgent/?String=Mozilla/5.0%20(Windows%20NT%2010.0;%20Win64;%20x64)%20Chrome/120.0.0.0%20Safari/537.36"
         curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionHttpStateEnabled/?boolean=true"
-        curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionUseProxyChain/?boolean=true"
+        curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionTimeoutInSecs/?Integer=120"
+        
+        # Spider settings
+        curl -sf "${{ inputs.zap-api-url }}/JSON/spider/action/setOptionMaxDuration/?Integer=60"
+        curl -sf "${{ inputs.zap-api-url }}/JSON/spider/action/setOptionMaxParseSizeBytes/?Integer=10485760"
         
         # Performance settings
         curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionThreadPerHost/?Integer=4"
-        curl -sf "${{ inputs.zap-api-url }}/JSON/spider/action/setOptionMaxDuration/?Integer=60"
         curl -sf "${{ inputs.zap-api-url }}/JSON/ascan/action/setOptionThreadPerHost/?Integer=4"
-        curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionMaxResponseSize/?Integer=20971520"
-        curl -sf "${{ inputs.zap-api-url }}/JSON/spider/action/setOptionMaxParseSizeBytes/?Integer=10485760"
-
-        # Reliability settings
-        curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionTimeoutInSecs/?Integer=120"
-        curl -sf "${{ inputs.zap-api-url }}/JSON/core/action/setOptionMaximumAlertInstances/?Integer=100"
