feat: add Prometheus integration and security metrics for synthetic monitoring

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -43,6 +43,21 @@ services:
     ports:
       - "9091:9091"
 
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    depends_on:
+      - pushgateway
+
   zap:
     image: ghcr.io/zaproxy/zaproxy:stable
     volumes:
@@ -53,3 +68,4 @@ services:
 
 volumes:
   minio_data:
+  prometheus_data:
