--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -61,10 +61,26 @@ services:
   zap:
     image: ghcr.io/zaproxy/zaproxy:stable
     volumes:
-      - ./zap-results:/zap/wrk
-    command: ["zap.sh", "-daemon", "-host", "0.0.0.0", "-port", "8080", "-config", "api.addrs.addr.name=.*", "-config", "api.addrs.addr.regex=true"]
+      - ./zap-results:/zap/wrk:rw
+    environment:
+      - JAVA_OPTS=-Xmx512m
+    command: [
+      "zap.sh", 
+      "-daemon", 
+      "-host", "0.0.0.0", 
+      "-port", "8080", 
+      "-config", "api.addrs.addr.name=.*", 
+      "-config", "api.addrs.addr.regex=true",
+      "-config", "api.disablekey=true"
+    ]
     ports:
       - "8080:8080"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/", "||", "exit", "1"]
+      interval: 20s
+      timeout: 10s
+      retries: 6
+      start_period: 30s
 
 volumes:
   minio_data:
