--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -71,15 +71,17 @@ services:
       "-port", "8080", 
       "-config", "api.addrs.addr.name=.*", 
       "-config", "api.addrs.addr.regex=true",
-      "-config", "api.disablekey=true"
+      "-config", "api.disablekey=true",
+      "-config", "database.recoverylog=false",
+      "-config", "connection.timeoutInSecs=60"
     ]
     ports:
       - "8080:8080"
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/", "||", "exit", "1"]
-      interval: 20s
-      timeout: 10s
-      retries: 6
+      test: ["CMD", "wget", "-qO-", "http://localhost:8080/JSON/core/view/version/", "||", "exit", "1"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
       start_period: 30s
 
 volumes:
