--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -42,22 +42,14 @@ jobs:
           - 8080:8080
         env:
           JAVA_OPTS: "-Xmx512m"
+          ZAP_ARGS: "-daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true -config api.disablekey=true -config database.recoverylog=false -config connection.timeoutInSecs=60"
         options: >-
-          --entrypoint "zap.sh"
+          --entrypoint "/zap/zap.sh"
           --health-cmd "wget -qO- http://localhost:8080/JSON/core/view/version/ || exit 1"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 10
           --health-start-period 30s
-        args: >-
-          -daemon
-          -host 0.0.0.0
-          -port 8080
-          -config api.addrs.addr.name=.*
-          -config api.addrs.addr.regex=true
-          -config api.disablekey=true
-          -config database.recoverylog=false
-          -config connection.timeoutInSecs=60
 
     steps:
       - uses: actions/checkout@v4
