--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -41,15 +41,24 @@ jobs:
         ports:
           - 8080:8080
         env:
-          JAVA_OPTS: "-Xmx512m"
-          ZAP_ARGS: "-daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true -config api.disablekey=true -config database.recoverylog=false -config connection.timeoutInSecs=60"
+          JAVA_OPTS: "-Xmx512m -Djava.awt.headless=true"
         options: >-
-          --entrypoint "/zap/zap.sh"
-          --health-cmd "wget -qO- http://localhost:8080/JSON/core/view/version/ || exit 1"
+          --entrypoint "/zap/zap-x.sh"
+          --health-cmd "curl -f http://localhost:8080/JSON/core/view/version/ || exit 1"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 10
           --health-start-period 30s
+        args: >-
+          -daemon
+          -host 0.0.0.0
+          -port 8080
+          -config api.addrs.addr.name=.*
+          -config api.addrs.addr.regex=true
+          -config api.disablekey=true
+          -config database.recoverylog=false
+          -config connection.timeoutInSecs=60
+          -nostartup
 
     steps:
       - uses: actions/checkout@v4
@@ -65,7 +74,7 @@ jobs:
         run: |
           echo "Waiting for ZAP to be ready..."
           for i in {1..12}; do
-            if curl -s -f http://localhost:8080/JSON/core/view/version/ > /dev/null; then
+            if curl -sf http://localhost:8080/JSON/core/view/version/ > /dev/null; then
               echo "ZAP is ready!"
               exit 0
             fi
