--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -63,22 +63,23 @@ services:
     volumes:
       - ./zap-results:/zap/wrk:rw
     environment:
-      - JAVA_OPTS=-Xmx512m
+      - JAVA_OPTS=-Xmx512m -Djava.awt.headless=true
     command: [
-      "zap.sh", 
-      "-daemon", 
-      "-host", "0.0.0.0", 
-      "-port", "8080", 
-      "-config", "api.addrs.addr.name=.*", 
+      "zap-x.sh", 
+      "-daemon",
+      "-host", "0.0.0.0",
+      "-port", "8080",
+      "-config", "api.addrs.addr.name=.*",
       "-config", "api.addrs.addr.regex=true",
       "-config", "api.disablekey=true",
       "-config", "database.recoverylog=false",
-      "-config", "connection.timeoutInSecs=60"
+      "-config", "connection.timeoutInSecs=60",
+      "-nostartup"
     ]
     ports:
       - "8080:8080"
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:8080/JSON/core/view/version/", "||", "exit", "1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/JSON/core/view/version/"]
       interval: 10s
       timeout: 5s
       retries: 10
