feat: streamline ZAP entrypoint configuration for synthetic monitoring with consolidated options

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -64,11 +64,8 @@ services:
       - ./zap-results:/zap/wrk:rw
     environment:
       - JAVA_OPTS=-Xmx512m -Djava.awt.headless=true
-    command: [
-      "zap-x.sh", 
-      "-daemon",
-      "-host", "0.0.0.0",
-      "-port", "8080",
+    entrypoint: [
+      "/zap/zap-x.sh", "-daemon", "-host", "0.0.0.0", "-port", "8080",
       "-config", "api.addrs.addr.name=.*",
       "-config", "api.addrs.addr.regex=true",
       "-config", "api.disablekey=true",
