--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -43,22 +43,12 @@ jobs:
         env:
           JAVA_OPTS: "-Xmx512m -Djava.awt.headless=true"
         options: >-
-          --entrypoint "/zap/zap-x.sh"
+          --entrypoint "/zap/zap-x.sh -daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true -config api.disablekey=true -config database.recoverylog=false -config connection.timeoutInSecs=60 -nostartup"
           --health-cmd "curl -f http://localhost:8080/JSON/core/view/version/ || exit 1"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 10
           --health-start-period 30s
-        args: >-
-          -daemon
-          -host 0.0.0.0
-          -port 8080
-          -config api.addrs.addr.name=.*
-          -config api.addrs.addr.regex=true
-          -config api.disablekey=true
-          -config database.recoverylog=false
-          -config connection.timeoutInSecs=60
-          -nostartup
 
     steps:
       - uses: actions/checkout@v4
