--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -42,14 +42,15 @@ jobs:
           - 8080:8080
         env:
           JAVA_OPTS: "-Xmx512m -Djava.awt.headless=true"
+          ZAP_ARGS: "-daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true -config api.disablekey=true -config database.recoverylog=false -config connection.timeoutInSecs=60 -nostartup"
         options: >-
-          --entrypoint=/zap/zap.sh
+          --entrypoint=/bin/bash
           --health-cmd "curl -f http://localhost:8080/JSON/core/view/version/ || exit 1"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 10
           --health-start-period 30s
-        command: ["-daemon", "-host", "0.0.0.0", "-port", "8080", "-config", "api.addrs.addr.name=.*", "-config", "api.addrs.addr.regex=true", "-config", "api.disablekey=true", "-config", "database.recoverylog=false", "-config", "connection.timeoutInSecs=60", "-nostartup"]
+          -c "/zap/zap.sh \$ZAP_ARGS"
 
     steps:
       - uses: actions/checkout@v4
