--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -64,8 +64,8 @@ services:
       - ./zap-results:/zap/wrk:rw
     environment:
       - JAVA_OPTS=-Xmx512m -Djava.awt.headless=true
+      - ZAP_ARGS=-daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true -config api.disablekey=true -config database.recoverylog=false -config connection.timeoutInSecs=60 -nostartup
     entrypoint: /zap/zap.sh
-    command: ["-daemon", "-host", "0.0.0.0", "-port", "8080", "-config", "api.addrs.addr.name=.*", "-config", "api.addrs.addr.regex=true", "-config", "api.disablekey=true", "-config", "database.recoverylog=false", "-config", "connection.timeoutInSecs=60", "-nostartup"]
     ports:
       - "8080:8080"
     healthcheck:
