--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -42,15 +42,13 @@ jobs:
           - 8080:8080
         env:
           JAVA_OPTS: "-Xmx512m -Djava.awt.headless=true"
-          ZAP_ARGS: "-daemon -host 0.0.0.0 -port 8080 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true -config api.disablekey=true -config database.recoverylog=false -config connection.timeoutInSecs=60 -nostartup"
         options: >-
-          --entrypoint=/bin/bash
+          --entrypoint /zap/zap.sh
           --health-cmd "curl -f http://localhost:8080/JSON/core/view/version/ || exit 1"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 10
           --health-start-period 30s
-          -c "/zap/zap.sh \$ZAP_ARGS"
 
     steps:
       - uses: actions/checkout@v4
@@ -60,6 +58,11 @@ jobs:
           sudo mkdir -p /tmp/zap
           sudo chown -R 1000:1000 /tmp/zap
           sudo chmod -R 777 /tmp/zap
+
+      - name: Configure ZAP
+        run: |
+          docker exec $(docker ps -q --filter "name=zap") /zap/zap.sh -daemon -host 0.0.0.0 -port 8080 &
+          sleep 10
 
       - name: Wait for ZAP
         timeout-minutes: 2
