--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -64,15 +64,8 @@ services:
       - ./zap-results:/zap/wrk:rw
     environment:
       - JAVA_OPTS=-Xmx512m -Djava.awt.headless=true
-    command: [
-      "-daemon",
-      "-host", "0.0.0.0",
-      "-port", "8080",
-      "-config", "api.disablekey=true",
-      "-config", "database.recoverylog=false",
-      "-config", "api.addrs.addr.name=.*",
-      "-config", "api.addrs.addr.regex=true"
-    ]
+    entrypoint: /zap/zap-full-scan.py
+    command: ["-I", "-j"]
     ports:
       - "8080:8080"
     healthcheck:
