--- a/.github/actions/synthetic-monitoring/action.yml
+++ b/.github/actions/synthetic-monitoring/action.yml
@@ -123,10 +123,9 @@ runs:
       uses: zaproxy/action-baseline@v0.14.0
       with:
         target: ${{ inputs.test_url }}
-        # rules_file_name: ${{ github.action_path }}/.zap/rules-config.tsv
-        # cmd_options: '-a'
-        # allow_issue_writing: true
-        # fail_action: false
+        rules_file_name: ${{ github.action_path }}/.zap/rules-config.tsv
+        allow_issue_writing: true
+        fail_action: false
 
     - name: Upload Reports
       if: always()
