--- a/.github/actions/synthetic-monitoring/action.yml
+++ b/.github/actions/synthetic-monitoring/action.yml
@@ -120,12 +120,12 @@ runs:
         fi
 
     - name: Run ZAP Scan
-      uses: zaproxy/action-baseline@v0.14.0
+      uses: zaproxy/action-full-scan@v0.12.0
       with:
         target: ${{ inputs.test_url }}
         rules_file_name: ${{ github.action_path }}/.zap/rules-config.tsv
         cmd_options: -a
-        allow_issue_writing: false
+        allow_issue_writing: true
         fail_action: false
 
     - name: Upload Reports
