--- a/.github/actions/synthetic-monitoring/action.yml
+++ b/.github/actions/synthetic-monitoring/action.yml
@@ -125,7 +125,7 @@ runs:
       with:
         target: ${{ inputs.test_url }}
         rules_file_name: ${{ github.action_path }}/.zap/rules-config.tsv
-        cmd_options: -a
+        cmd_options: '-a'
         allow_issue_writing: true
         fail_action: false
 
