feat: add rules file name to ZAP scan action and enable error handling options

--- a/.github/actions/synthetic-monitoring/action.yml
+++ b/.github/actions/synthetic-monitoring/action.yml
@@ -124,6 +124,7 @@ runs:
       continue-on-error: true
       with:
         target: ${{ inputs.test_url }}
+        rules_file_name: '.zap/rules-config.tsv'
         cmd_options: '-a'
         allow_issue_writing: true
         fail_action: false
