--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -56,12 +56,33 @@ jobs:
           browser: ${{ inputs.browser || 'chromium' }}
           env_vars: ${{ inputs.env_vars }}
 
+  zap-scan:
+    needs: synthetic-tests
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    
+    steps:
+      - uses: actions/checkout@v4
+      
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.14.0
-        continue-on-error: true
+        uses: zaproxy/action-baseline@v0.11.0
         with:
           target: ${{ env.TEST_URL }}
           rules_file_name: '.zap/rules-config.tsv'
           cmd_options: '-a'
           allow_issue_writing: true
           fail_action: false  # Don't fail the workflow on alerts
+
+      - name: Upload ZAP Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-scan-report
+          path: |
+            report_html.html
+            report_md.md
+            report_json.json
+          retention-days: 30
