--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test:synthetic": "playwright test",
     "test:action": "chmod +x ./scripts/test-action.sh && ./scripts/test-action.sh",
     "docker:test:up": "docker-compose -f docker-compose.test.yml up -d",
-    "docker:test:down": "docker-compose -f docker-compose.test.yml down -v"
+    "docker:test:down": "docker-compose -f docker-compose.test.yml down -v",
+    "process:zap": "chmod +x ./scripts/process-zap-reports.sh && ./scripts/process-zap-reports.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
@@ -19,6 +20,7 @@
     "@playwright/test": "^1.42.1",
     "@types/archiver": "^6.0.2",
     "@types/node": "^20.11.24",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2"
   }
 }
