feat: change dependency installation from npm ci to npm install to allow for installations without package-lock.json

--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -101,7 +101,8 @@ jobs:
           node-version: '20'
           
       - name: Install dependencies
-        run: npm ci
+        # Using npm install instead of npm ci to install dependencies without requiring a package-lock.json file
+        run: npm install
         
       - name: Process ZAP Reports and Send to Prometheus
         env:
