feat: add JavaScript wrapper for processing ZAP reports and update workflow to use it

--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -111,4 +111,5 @@ jobs:
           AWS_REGION: ${{ env.AWS_REGION }}
           S3_BUCKET: ${{ env.S3_BUCKET }}
           PROMETHEUS_PUSHGATEWAY: ${{ env.PROMETHEUS_PUSHGATEWAY }}
-        run: npx ts-node scripts/process-zap-reports.ts
+        # Use the JavaScript wrapper instead of directly calling the TypeScript file
+        run: node scripts/process-zap-reports.js
