--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/archiver": "^6.0.2",
     "@types/node": "^20.11.24",
     "typescript": "^5.3.3",
-    "ts-node": "^10.9.2",
-    "ts-node-esm": "^10.9.2"
+    "ts-node": "^10.9.2"
   }
 }
