--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:action": "chmod +x ./scripts/test-action.sh && ./scripts/test-action.sh",
     "docker:test:up": "docker-compose -f docker-compose.test.yml up -d",
     "docker:test:down": "docker-compose -f docker-compose.test.yml down -v",
-    "process:zap": "chmod +x ./scripts/process-zap-reports.sh && ./scripts/process-zap-reports.sh"
+    "process:zap": "chmod +x ./scripts/process-zap-reports.sh && ./scripts/process-zap-reports.sh",
+    "build": "tsc",
+    "build:zap": "tsc -p tsconfig.json scripts/process-zap-reports.ts --outDir dist"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
